fea-0005 - initialk swagger changes
